# kdev-python

./: .gitignore  .kateconfig  .kde-ci.yml  .kdev_include_paths  .krazy  .reviewboardrc  CMakeLists.txt  DESIGN  INSTALL  Messages.sh  README  README.packagers  TODO  codestyle.py  example_ast.py  example_ast.xml  kdevpythonsupport-newformat.categories  kdevpythonsupport-oldformat.categories  kdevpythonsupport.categories  kdevpythonsupport.desktop  kdevpythonsupport.desktop.cmake  kdevpythonsupport.json  kdevpythonversion.h.cmake  org.kde.kdev-python.appdata.xml  org.kde.kdev-python.metainfo.xml  python.kdev4  pythondebug.cpp  pythondebug.h  pythonhighlighting.cpp  pythonhighlighting.h  pythonlanguagesupport.cpp  pythonlanguagesupport.h  pythonparsejob.cpp  pythonparsejob.h  pythonpythonparser.py  pythonstylechecking.cpp  pythonstylechecking.h  runtest.py
codecompletion/: CMakeLists.txt  codecompletiondebug.cpp  codecompletiondebug.h  context.cpp  context.h  functiondeclarationcompletionitem.cpp  functiondeclarationcompletionitem.h  helpers.cpp  helpers.h  implementfunctioncompletionitem.cpp  implementfunctioncompletionitem.h  importfileitem.cpp  importfileitem.h  keyworditem.cpp  keyworditem.h  model.cpp  model.h  pythoncodecompletioncontext.cpp  pythoncodecompletioncontext.h  pythoncodecompletionmodel.cpp  pythoncodecompletionmodel.h  pythoncodecompletionworker.cpp  pythoncodecompletionworker.h  pythoncompletionexport.h  pythondeclarationcompletionitem.cpp  pythondeclarationcompletionitem.h  worker.cpp  worker.h
codecompletion/items/: declaration.cpp  declaration.h  functiondeclaration.cpp  functiondeclaration.h  implementfunction.cpp  implementfunction.h  importfile.cpp  importfile.h  keyword.cpp  keyword.h  missingincludeitem.cpp  missingincludeitem.h  replacementvariable.cpp  replacementvariable.h
codecompletion/tests/: CMakeLists.txt  pycompletiontest.cpp  pycompletiontest.h
debugger/: CMakeLists.txt  __kdevpython_debugger_utils.py  asmskip.py  breakpointcontroller.cpp  breakpointcontroller.h  debuggerdebug.cpp  debuggerdebug.h  debugjob.cpp  debugjob.h  debugsession.cpp  debugsession.h  kdevpdb.desktop  kdevpdb.json  kdevpdb.py  kdevpdbconn.py  kdevpdbcore.py  kdevpdbmain.py  kdevpdbvariablesupport.py  pdbdebuggerinstance.cpp  pdbdebuggerinstance.h  pdbdebuggerplugin.cpp  pdbdebuggerplugin.h  pdbframestackmodel.cpp  pdbframestackmodel.h  pdbinterrupt.cpp  pdblauncher.cpp  pdblauncher.h  pdbprocess.cpp  pdbprocess.h  pythondebugexport.h  startupinfo.h  utils.py  variable.cpp  variable.h  variablecontroller.cpp  variablecontroller.h
docfilekcm/: CMakeLists.txt  docfilemanagerwidget.cpp  docfilemanagerwidget.h  docfilewizard.cpp  docfilewizard.h  kcm_docfiles.cpp  kcm_docfiles.h  kcm_kdevpythondocfiles.desktop  kdev_python_docfiles.knsrc
duchain/: .kdev_include_paths  CMakeLists.txt  contextbuilder.cpp  contextbuilder.h  correctionhelper.cpp  correctionhelper.h  declarationbuilder.cpp  declarationbuilder.h  duchaindebug.cpp  duchaindebug.h  dumpchain.cpp  dumpchain.h  expressionvisitor.cpp  expressionvisitor.h  helpers.cpp  helpers.h  navigationwidget.cpp  navigationwidget.h  pythonduchainexport.h  pythonducontext.cpp  pythonducontext.h  pythoneditorintegrator.cpp  pythoneditorintegrator.h  typebuilder.cpp  typebuilder.h  usebuilder.cpp  usebuilder.h
duchain/assistants/: missingincludeassistant.cpp  missingincludeassistant.h
duchain/declarations/: .swp.importedmoduledeclaration.cpp  classdeclaration.cpp  classdeclaration.h  decorateddeclaration.cpp  decorateddeclaration.h  decorator.h  functiondeclaration.cpp  functiondeclaration.h  importedmoduledeclaration.cpp  importedmoduledeclaration.h  variablelengthcontainerdeclaration.cpp  variablelengthcontainerdeclaration.h
duchain/navigation/: declarationnavigationcontext.cpp  declarationnavigationcontext.h  navigationwidget.cpp  navigationwidget.h
duchain/tests/: CMakeLists.txt  duchainbench.cpp  duchainbench.h  pyduchaintest.cpp  pyduchaintest.h  waitforupdate.cpp  waitforupdate.h
duchain/types/: hintedtype.cpp  hintedtype.h  indexedcontainer.cpp  indexedcontainer.h  nonetype.cpp  nonetype.h  unsuretype.cpp  unsuretype.h  variablelengthcontainer.cpp  variablelengthcontainer.h
kdev-pg_python_parser/: CMakeLists.txt  decoder.cpp  decoder.h  main.cpp  python.g  python_io.cpp  python_lexer.h  python_lexer.ll  pythondriver.cpp  pythonparserexport.h
kdev-pg_python_parser/tests/: automatix.py  func.py  import.py  list1.py  log.py  parsetest.h  real.py  single_quotes.py  single_quotes_fail.py  string.py  string2.py  string_mul.py  test.py  test2.py  test_fun.py  test_ml.py  test_runner.py  testlist.py  try_test.py
parser/: BUGS  CMakeLists.txt  FlexLexer.h  README.md  ast.cpp  ast.h  ast2xml.py  astbuilder.cpp  astbuilder.h  astdefaultvisitor.cpp  astdefaultvisitor.h  astfromxml.cpp  astfromxml.h  astprinter.cpp  astprinter.h  asttransformer.cpp  asttransformer.h  astvisitor.cpp  astvisitor.h  buildsimpleastvisitor.cpp  buildsimpleastvisitor.h  codehelpers.cpp  codehelpers.h  contextbuilder.cpp  contextbuilder.h  conversionGenerator.py  cythonsyntaxremover.cpp  cythonsyntaxremover.h  declarationbuilder.cpp  declarationbuilder.h  decoder.cpp  decoder.h  dumpchain.cpp  dumpchain.h  generated.h  kdev-pg-memory-pool.h  kdevutil.py  kwcheck.cpp  kwcheck.h  main.cpp  (+52 more)
parser/astfromxml_detail/: fromxml_fwd.h  nodereader.h  nodereader_impl.h  operators.h  typemap.h  typeswitch.h
parser/tests/: CMakeLists.txt  automatix.py  classdefinitiontest.cpp  classdefinitiontest.h  classdefinitiontest_data.cpp  datahelper.h  dict.py  fail.py  for.py  for_list.py  fortest.cpp  fortest.h  fortest_data.cpp  func_call.py  functiondeclarationtest.cpp  functiondeclarationtest.h  import.py  import_fail.py  (+22 more)
pep8kcm/: CMakeLists.txt  kcm_kdevpythonpep8.desktop  kcm_pep8.cpp  kcm_pep8.h  pep8.ui
projectkcm/: CMakeLists.txt  kcm_kdevpythonproject.desktop  pythonprojectkcm.cpp  pythonprojectkcm.h  pythonprojectsettings.kcfgc
python-src/: CMakeLists.txt  Makefile.pre.in  README  build-for-kdevelop.sh.in  configure  configure.in  setup.py
(+622 files in other folders)
